install class validator, class transformer

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/swagger": "^5.0.9",
     "@nestjs/typeorm": "^8.0.1",
     "Babel": "0.0.1",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "mysql2": "^2.2.5",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
